force-app/main/default/objects/Field_Tracker_Field__mdt/fields/Is_Long_Text__c.field-meta.xml
<CustomField>
    <fullName>Is_Long_Text__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Long Text</label>
    <type>Checkbox</type>
</CustomField>