force-app/main/default/objects/Field_Tracker_Field__mdt/fields/Is_user_field__c.field-meta.xml
<CustomField>
    <fullName>Is_user_field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is user field</label>
    <type>Checkbox</type>
</CustomField>